--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "gh-pages": "^0.12.0",
     "imports-loader": "^0.7.0",
     "istanbul-instrumenter-loader": "^1.2.0",
+    "jasmine-core": "^2.5.2",
     "karma": "^1.4.1",
     "karma-chrome-launcher": "^2.0.0",
     "karma-coverage": "^1.1.1",
