chore(typescript): exclude spec files from build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,8 @@
   },
   "exclude": [
     "node_modules",
-    "dist"
+    "dist",
+    "**/*.spec.ts"
   ],
   "awesomeTypescriptLoaderOptions": {
     "forkChecker": true,
